# datadot

./: README-zh.md  README.md  pyproject.toml  setup.py  test_dd.py
.github/workflows/: workflow.yml
src/: __init__.py  dd.py
src/dd/: dd.py
