[project]
name = "datadot"
version = "1.0.0"
description = "A functional data navigation tool for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dd"]

